--- a/content/docs/价值/序.md
+++ b/content/docs/价值/序.md
@@ -37,11 +37,21 @@ toc: true
 
 书中也谈到我对具有伟大格局观的创业者、创业组织以及对人才、教育、科学观的理解，这些恰恰是投资工作中最难得的际遇。今天的价值投资，在科技创新、商业进化的历程中，不仅可以扮演催生创新发展动能的孵化器，也可以消弭传统经济与科技创新之间的数字鸿沟。这也是资本服务于实体经济、参与资源最优化配置的最好方式。
 
-为此，我需要感谢所有的师长。得益于良好的教育，我可以永远走在探索真理的路上，这也是投资的最大乐趣。我也无法忘记在历次关键时刻始终信任我们的出资人、投资人，他们专业审慎的态度和坚持长期主义的眼光始终令我敬仰。我尤其需要感谢与我们拥有同样价值观、矢志不渝地创造价值的创业者、企业家和科学家，与他们共同创造价值，是人生最快意的事情。
+得益于好的教育，我可以永远走在探索真理的路上，这也是投资的最大乐趣。我也无法忘记在历次关键时刻始终信任我们的出资人、投资人，他们专业审慎的态度和坚持长期主义的眼光始终令我敬仰。我尤其需要感谢与我们拥有同样价值观、矢志不渝地创造价值的创业者、企业家和科学家，与他们共同创造价值，是人生最快意的事情。
 
-在这本书即将出版的时候，新型冠状病毒肺炎疫情肆虐全球，影响着无数家庭、社区和各行各业，世界经济的不确定性使得人们难以判断未来。困难是一面镜子，最好的反省往往都来源于此。**每次危机出现，都为我们提供了一次难得的压力测试和投资复盘的机会，而最终是价值观决定了你将如何应对和自处。** 在这样的特殊时期里，我们依然坚守长期主义，就是因为我们既看到了当下，关注企业短期的利润、现金流，努力做足准备以摆脱短期的困境，挺过“眼前的苟且”，又相信未来，对于创造价值的事情从不怀疑，坚持追求长期结构性投资机会，找到价值的“诗和远方”。
+新型冠状病毒肺炎疫情肆虐全球，影响着无数家庭、社区和各行各业，世界经济的不确定性使得人们难以判断未来。困难是一面镜子，最好的反省往往都来源于此。**每次危机出现，都为我们提供了一次难得的压力测试和投资复盘的机会，而最终是价值观决定了你将如何应对和自处。** 在这样的特殊时期里，我们依然坚守长期主义，就是因为我们既看到了当下，关注企业短期的利润、现金流，努力做足准备以摆脱短期的困境，挺过“眼前的苟且”，又相信未来，对于创造价值的事情从不怀疑，坚持追求长期结构性投资机会，找到价值的“诗和远方”。
 
 最后，我想和大家分享的是，每个人都可以成为自己的价值投资人，时间、精力、追求和信念，这无数种选择，都是对自己人生的投资。价值创造无关高下，康庄大道尽是通途。以赤子之心，不被嘈杂浇铸；
 
 {{< alert icon="⚡️" text="出走半生，归来仍是少年。希望在坚持长期主义的旅途中，与你们同行，做时间的朋友。"/>}}
+
+## 目录
+
+ [第一节　价值的历程]({{< relref "2_寻找价值的历程" >}})
+
+ [第二节   　投资哲学]({{< relref "4_价值投资方法与哲学" >}})
+
+ [第三节   　创新框架]({{< relref "伟大格局观者同行" >}})
+
+ [第四节　 后　　记]({{< relref "后记" >}})
 
