--- a/content/docs/2投资哲学/5_价值投资者的自我修养.md
+++ b/content/docs/2投资哲学/5_价值投资者的自我修养.md
@@ -60,3 +60,27 @@ toc: true
 前面说过我的“三把火”理论，就是说人生中只有火烧不掉的东西才重要，即一个人的知识、能力和价值观，而支撑这三个方面的，是一个人理性的好奇、诚实与独立，这三点构成对价值投资者的基本要求。
 
 为什么强调理性？因为所谓的好奇、诚实和独立，都必须把严格的理性作为前提。理性意味着拒绝短期诱惑、功利心和许多天然的人性弱点，同时意味着拒绝主观臆断，以怀疑的态度、科学的方法去提出问题并找到答案。要想做出高质量的投资决策，关键在于尽可能做出前瞻性推演，而理性的好奇能够驱使人们探究事物的本源，为前瞻性推演奠定基础；理性的诚实能够保证人们在探索时不误入歧途；理性的独立能够保证人们做出理智的判断。理性是一种严谨的治学精神，是一种纯粹的道德责任，也是个人层面最大的风控，能够在各种复杂的情形中成为关键的思考角度。
+
+### 理性的好奇
+
+投资人要始终对这个世界充满浓厚的好奇心，大到思考社会进步、商业演变的内在逻辑，小到思考企业如何运作才能够保持可持续的竞争优势。第一，好奇心一定源自原创性的头脑，可以打破所有条条框框的约束。好奇心的本质是自我驱动力，是一种朴素的求知欲和源自自身热爱的内驱力的结合。拥有好奇心的人善于提出问题、解决问题，而且提出问题比解决问题更彰显好奇心。寻找真相是困难的，但有好奇心的人就会爱折腾、爱琢磨，不满足于自己的已有经验，不断地问为什么，寻找现象和数据之间的底层联系，把事情想透彻。不能因为在行业待久了，就对创新的事物不管不问，甚至觉得创新的事物不靠谱。好奇心让人保持平和的心态，先尝试着接受，再去理解和判断。
+
+第二，这种好奇心不受短期利益的影响，不受金钱驱动。不能仅研究或涉足带来短期快速回报的项目，而忽视自己长期热爱的领域。换句话说，每个人都应该从自己真正的好奇心出发，而不能被表象所迷惑，以为那是自己想追求的东西，有的时候人们喜欢追风口，但尤其需要谨记这一点：人多的地方你别去。在创业或者投资的过程中，有许多趋同性的投资、趋同性的创业，这时候就要看你是不是真正有好奇心，真正发现了创造价值的方式。
+
+第三，好奇心不受好胜心或者战胜他人的成就感所驱动，不是为了当第一把别人比下去，也不是为了战胜市场。邓普顿基金集团创始人约翰·邓普顿（John Templeton）[(26)](javascript:void(0))有句名言：“战胜市场是一个很富有野心的目标，但追求它的时候要小心为上。”我们无法验证市场是对的，但也绝不敢说市场是错的，没有对市场的主观评价，也不去做简单的对比。这构成了我们对市场的基本态度。
+
+价值投资和好奇心天然绑定，如果没有对真理的好奇，很难拥有钻研的精神，也就无法获得超越市场的认知。理性的好奇强调依靠研究，而不是依靠垄断性资源或者运气，虽然那样会给人一种有捷径的错觉，但这些捷径或虚无的错觉都会误导认知。
+
+## 我对投资的思考
+
+- **价值投资不必依靠天才，只需依靠正确的思维模式，并控制自己的情绪。**
+
+- **好奇心不受好胜心或者战胜他人的成就感所驱动，不是为了当第一把别人比下去，也不是为了战胜市场。**
+
+- **信念有时比处境更加重要，你的格局观决定了你的生存环境，也决定了你的投资机会。**
+
+- **方法论本质上并无高低之分，只是天性的自知、自省与自洽。**
+
+- 　**选择投资方式就是选择自己的生活方式，出发点是你自己的内心，选择的是能够让你有幸福感的东西。**
+
+- **我宁愿丢掉客户，也不愿丢掉客户的钱。**
