第二节完结

--- a/content/docs/1价值/序.md
+++ b/content/docs/1价值/序.md
@@ -47,7 +47,7 @@ toc: true
 
 ## 目录
 
- [第一节　价值的历程]({{< relref "2_寻找价值的历程" >}})
+ [第一节　  价值历程]({{< relref "2_寻找价值的历程" >}})
 
  [第二节   　投资哲学]({{< relref "4_价值投资方法与哲学" >}})
 
