--- a/content/docs/2投资哲学/5_价值投资者的自我修养.md
+++ b/content/docs/2投资哲学/5_价值投资者的自我修养.md
@@ -71,6 +71,152 @@ toc: true
 
 价值投资和好奇心天然绑定，如果没有对真理的好奇，很难拥有钻研的精神，也就无法获得超越市场的认知。理性的好奇强调依靠研究，而不是依靠垄断性资源或者运气，虽然那样会给人一种有捷径的错觉，但这些捷径或虚无的错觉都会误导认知。
 
+### 理性的诚实
+
+如果好奇心是与生俱来的，那么诚实则是人生重要的后天选择。好奇心能够驱使一个人不断学习，而诚实则是一套自我矫正系统，让人真的可以“吃一堑，长一智”，实现正向的积累。
+
+首先，诚实是最好的信义，不要骗别人，要在理性中保持专业和严谨，不能为了一时诱惑而失信于别人。在资本市场，诚实尤为可贵，因为总有人心口不一、言行不一。在别人可以利用不诚实而获得短期成功的诱惑下，怎样能够保证自己不为所动、坚持内心的诚实，考验的是一个人的长期眼光。因欺骗而获得的成功不会持久，可能代价还很大，最后是“搬起砖头砸到自己的脚”。
+
+其次，诚实不仅仅是对别人讲信用，关键还是对自己坦诚，对自我有清醒客观的认知。一方面，要对自己的缺点保持诚实，敢于及时认错、调整思路。特别是当市场出现明显反馈的时候，不要总是从外界找原因，要时常质疑一下自己，从自己找原因。持有一个观点，就一定要先尝试着去自我证伪，否则那就不是真正属于自己的观点。要善于扬长避短，在与市场的反复切磋中找到自己的思维误区和性格盲点。可以主动监控自己的判断和外界提供的反馈，建立调整和改善的机制，既要能从失败中找到自己的问题，避免尽推托于客观原因，又不能太悲观，要有“百战归来再读书”[(27)](javascript:void(0))的乐观主义精神。
+
+另一方面，还要对自己的优点保持诚实，敢于认可自己，在很难做判断的时候做出决策。许多时候，研究的过程无法穷尽所有可能，也无法获得足够多的信息。这就要求投资人做投资决策时，在信息不完善、不确定的状态下，诚实地相信自己已经运用第一性原理的思维模式，拿到了关键的信息。有的时候，模糊的正确要好于精细的误判。**这种诚实是投资人的一种勇气，能够帮助投资人克服很多心理障碍。**
+
+### 理性的独立
+
+除了理性的好奇、诚实，价值投资同样强调理性的独立。独立是指独立探索精神，即智识上的独立，对事物有自己独立的意见和观点。中国传统的教育模式是讲堂式教育，而如今越来越强调思辨式教育——不是一味地服从权威，或者按大多数人的看法行事，而是根据自己的研究和思考得到答案。只有通过独立思考，不断客观地拷问自己是否尊重了事实和常识，形成的见识才是自己的。而且，这样的见识会转化成智慧，并会随着时间复合式增长。
+
+独立思考强调不能人云亦云，不能在市场波动时轻易地否定自己的结论。当我们的研究和洞察经历反复校验都没有问题时，一旦下了决定，只要前提没有变化，就要有笃定的精神。不要总是问别人怎么看，关键在于应该怎么看、怎么想，在金融市场中，人们普遍认为共识已经反映在价格中，这尤其需要警惕，因为共识和正确与否没有必然的因果关系。市场在一段时间里与你的看法不同，或者许多人的观点与你的不同，并不意味着你的观点是错误的。独立判断意味着对市场保持冷静的思考，不要轻易妥协。很多时候，妥协会产生一个“坡”，你从“坡”上慢慢下来，刚开始没有感觉，但下得越多速度越快，等你意识到的时候，往往已经很难改变了。独立性就是不盲目，不轻易受别人观点的影响，充分考虑各种可能性后，基于严谨的逻辑独立做出判断。
+
+某种程度上，好的投资人应该去找真正正确的“非共识”。这些问题是投资中最难回答的：市场真正有效吗？市场共识是什么？所有的公开信息以及这些信息产生的结果都能合理反映在价格中吗？究竟哪些因素已经反映在价格中了，哪些还没有反映？许多创新企业的估值已经很高，而传统企业的估值往往偏低，乐观或者悲观的因素是否在估值层面有了充分甚至过分的反映？我们认为，往往是与众不同的视角，少数的、独立的决策，特别是真正正确的非共识，才有可能带来超越市场的回报，而且市场给你的回报将是呈指数级的。杰夫·贝佐斯表达过这样一个观点：“我相信，如果你要创新，必须愿意长时间被误解。你必须采取一个非共识但正确的观点，才能战胜竞争对手。”
+
+独立思考更加强调不能盲目信任自己的经验，不能有认知上的偏见。许多投资人喜欢复盘，总结过去的得失经验，但习惯用很老旧的经验去解决当前的问题，或者干脆简单机械地套用刚刚积攒的经验去解决新出现的问题，这其实比不积累经验还要可怕。很多人会避免犯相同的错误，但如果只是盲目信从经验，就有可能不断地犯新错误。许多人相信历史会周期往复，但也有人觉得这次会不一样，其实读历史的目的并不是一劳永逸地知道该怎么办，而是为了总结出规律，因此我们需要看到事情的多样性、丰富性。每次判断都是崭新的，都应该向前看。要把历史当作一种知识储备和情景训练，当作抵御重大风险的压舱石，而不是保你百战百胜的万能药。
+
+## 拒绝投机
+
+在投资中，价值投资者要善于把握商业机会，对人、生意、环境和组织时刻保持跟踪和观察，要下如切如磋、如琢如磨的功夫，就好比粗糙之米，再舂则粗糠全去，三舂四舂则精白绝伦。
+
+本杰明·格雷厄姆在《证券分析》中指出，表面和眼前的现象是金融世界的梦幻泡影与无底深渊。他认为：“投资是一种通过认真分析研究，有望保本并能获得满意收益的行为，必须以事实和透彻的数量分析作为基础。不满足这些条件的行为被称为投机，投机往往是奇思异想和猜测。”对于投资人来说，**信念有时比处境更加重要，你的格局观决定了你的生存环境，也决定了你的投资机会。**当你已经十分清楚自己的信仰是什么时，其他所有的事情都是干扰项。
+
+### 拒绝零和游戏，做正和游戏
+
+有很多投资人会以任何价格购买任何公司的股票，只要这些公司的股票有上升的趋势，他们会在全市场都讨论某个公司时持仓加入；也有许多投资人会在大多数时间里坚持价值投资，但遇到特别容易赚钱的机会时也会偶尔尝试。华尔街的传奇人物卢西恩·胡伯尔（Lucien O. Hooper）有一句名言：“给我留下深刻印象的，是那些整天很放松的长线投资者，而不是那些短线的、经常换股的投机者。”我一直在思考，价值投资者的最大坚守是什么。得到的答案是：永远坚持做创造价值的事情。价值投资者是求成者，而不是求存者，求成者追求成功，而求存者往往把他人视为威胁。**价值投资不是击鼓传花的游戏，不是投资人之间的零和游戏，不应该从同伴手中赚钱，而应通过企业持续不断创造价值来获取收益，共同把蛋糕做大，是正和游戏。**
+
+资本市场是个多样且复杂的生态系统，在这样的市场中会出现各种各样赚快钱的机会。由于监管环境在不断变化，许多投资机构可以说一套做一套。但投资人真正应该看重的不仅仅是别人说了什么、做了什么，而是自己相信什么。在中国拒绝投机尤为困难，因为中国市场是一个非常宽容的市场，价格偏离价值的幅度经常很大，而且偏离的时间比较长，市场的有效性还处在一个不断成熟的阶段，中国企业的生命周期和盈利周期仍在不断变化，因此能够允许众多生存方式并存。
+
+### 当幸福来敲门时，你要在家
+
+坚持走在价值投资的道路上，就要保证“当幸福来敲门时，你要在家”。如果陷于意气之争，不断去和市场较劲，寻求短期博弈，就放弃了去看5年、10年的机会。到那个时候，投机不仅仅是因为诱惑，更是源于一种压力。投资市场中的压力无处不在，在市场恐慌和疯狂的时候，人们往往无法保持冷静。
+
+晚清名臣张之洞在修建卢汉铁路时提出了“储铁宜急，勘路宜缓，开工宜迟，竣工宜速”的指导原则，这句话用来形容克服投机的心态尤为贴切。打基础的事应该着急，把自己的核心能力赶紧储备起来，而真正看项目做决策时则应该想得透彻和长远，在关键时候再出手，一旦出手就全力帮助创业者创造更多价值。相反，投机心态则是不管储铁是否完备，就勘路开工蜂拥而上，结果自顾不暇、手忙脚乱。所以，拒绝投机就是要掌握好投资的“迟速缓急”。
+
+等待在投资中是一项极具挑战又极有价值的事情，有时候需要等待1年，有时候需要等待10年。**等待也是一种主动，等待不是什么都不做，保持耐心等待的最好做法就是对无关的事情连想都不要想，一直清楚什么是该做的、什么是不该做的。**
+
+《论语》中有句话：“虽小道，必有可观者焉；致远恐泥，是以君子不为也。”[(28)](javascript:void(0))要对坚持的事情富有耐心，驾驭情绪，时刻自我反思，保持高度专注。压力往往可以通过专注来消解，专注意味着你要敢于说“不”，不要去做对自己的核心目标没有用的事情。即使有余力去做更多的事情，或者自认为拥有及时把精力拉回来的自控力，我仍然建议你不要那样去做。你甚至可以休息来养精蓄锐，等待下一次机会。不要高估自己的自控力，更不要小看人性。回避短期心态，是价值投资者的重要修养。
+
+## 警惕机械的价值投资
+
+价值投资者还要有一个重要修养，就是不要做机械的价值投资。那么什么是机械的价值投资？简言之就是机械地长期持有、机械地寻找低估值、机械地看基本面。
+
+### 没有教科书式的价值投资
+
+我们说价值投资要从书本上学，从基本常识出发，但不能言必谈理论和原则。警惕机械的价值投资就是“要警惕右、防止左，但主要是防止左”。价值投资的“右”是指机会主义者，要拒绝投机。价值投资的“左”是指激进主义者，比“右”更可怕：第一，他们非常有隐蔽性，极其信仰价值投资，一旦发现别人有什么不对，就会说“这不是价值投资”；第二，他们非常投入，基本功扎实，做分析建模型很厉害，而且往往都是百科全书式的，似乎什么都了解、都知道；第三，他们以为自己非常诚实，且自认为做好了自我认知，因此就把自己也给骗了，沿着自己相信的方向一根筋地往深里走。可以说机会主义者往往赚不了大钱，也赔不了大钱。与机会主义者相比，机械的价值投资者可能更容易犯大的错误，错过大的投资机会。
+
+我们所说的价值投资，当然关注安全边际、企业估值、流动性这些基本概念，这些也是价值投资的应有之义。但现实中没有纯粹的、教科书式的市场，也没有纯粹的、教科书式的投资，更没有纯粹的、教科书式的价值投资。现代医学的奠基人克洛德·贝尔纳（Claud Bernard）[(29)](javascript:void(0))有句名言：“构成我们学习最大障碍的是已知的东西，不是未知的东西。”从书本上学的是基本常识，更是基本精神，不能套用条文去做价值投资，而是要理解条文背后的精神内核。
+
+就像在法律领域经常探讨的成文法和判例法的区别一样，成文法是高度总结的条文和概念，而判例法则是具体的判例结果。判例法最大的特点是，一个新案例能够围绕以前案例的司法原则和法律精神“走”一遍，而不用被法律规定和文本所局限。投资也是如此，许多投资方法是与当时的环境、所处的发展阶段、所处的市场环境相匹配的，它的理论化、抽象化也有理解和使用的前提。学习一套理念，看重的是从假设到验证再到结论的推导过程，因此不能也不应该套用任何现成的理念和方法。比如价值投资诞生之初，华尔街充斥着市场操纵和赌博气氛，上市公司没有建立完备的信息披露制度，财务信息更不为市场所知，且不乏会计欺诈现象，因此专业、理性成了投资的重要原则。看企业的基本面、研究财务信息、寻找安全边际，成为那个年代价值投资的精髓所在。投资不存在万能定律，要不断打破原有分析框架，在新的时代、新的环境中分析新变量、引入新参数，不能机械地学习格雷厄姆，也不能机械地学习巴菲特，他们也在随着时代的变化、商业的变化不断打破原有的投资理念。所以今天做价值投资，就必须在上述分析的基础上，用发展的眼光思考企业成长的各种可能性，考虑更多新因素、新变量，比如成本收益结构在新技术下的变化、人才和组织能力的变化、行业基础设施和生态的变化、社会伦理和环境的变化等。
+
+再来看怎样理解机械地长期持有、机械地寻找低估值、机械地看基本面。首先，长期持有只是结果，而不是目的。长期持有只是价值投资的某种外在表现形式，有些价值的实现需要时间的积累，有些价值的实现只需要环境的重大变化，所以不能说长期持有就是价值投资，非长期持有就不是价值投资。其次，购买低估值的股票并不是价值投资回报的持续来源，企业持续创造价值才是。特别是在当前的市场情况下，很难找到账面价值低于内在价值的投资标的。比寻找低估值更重要的是理解这只股票为什么被低估，能否从更高的维度上发现长期被低估的股票。最后，很多时候基本面投资往往是趋势投资，是看行业的基本面或经济的周期性，本质上也是博弈性的。我们所理解的价值投资，不仅仅要看到生意的宿命论，还要关注创业者的主观能动性，关注环境、生态的变化，这些都会改变生意的属性。因此，价值投资的前提是对公司进行长期的、动态的估值，寻找持续创造价值的确定性因素。
+
+### 与市场和解，与自己和解
+
+那怎样才能避免做机械的价值投资呢？总结起来核心是两个方面：第一，学会与市场和解，及时看看市场的反馈。有些投资人做一级市场，如果投的项目半年、一年之后沿着他的预想在走，他会认为自己的判断是正确的；如果没有，他会认为是市场的某些要素出了问题，或者时机未到。有些投资人做二级市场，市场会时时刻刻提供反馈，如果涨了，他们就认为市场是对的；如果跌了，就认为这个市场还不成熟。这些投资人永远站在自己的位置和视角去判断市场是理性的还是不理性的，去评价“市场先生”。但其实投资人应该利用好市场的反馈，不断提高全面思考的能力，而不是寄希望于“市场先生”能够符合自己的预期。尽管有人把“市场先生”比作“双向障碍患者”，但每一次市场的反馈都是在提示你可能哪些东西没有想到，或者哪些东西想到了但又出现了新的不可知因素。任何市场都不可能一成不变，市场的有效性也在变化中。
+
+第二，学会与自己和解，保持平常心，及时接受自我反馈。当发现现实总和自己所坚持的原则冲突时，就要思考如何建立一个既有条条框框又能灵活处置的缓冲地带，即在追求严谨和规律的同时，保留一些感性的出口。这个过程既是说服自己的过程，也是丰富自己的过程。要理解，自我否定是进化，自我纳悦也是进化。
+
+在与自己和解的过程中，你身边的人是否能够用同一套话语体系、用你们共同理解的语言把事情说清楚，对你与自己的和解过程非常重要。这就需要你先把自己的想法说出来，不仅仅是说出结论，更重要的是说出形成这个想法的缘起、过程。对于不同行业、不同逻辑类型的投资，要保持灵活和开放的心态。
+
+在投资过程中，我们曾经非常强调投资决策的重要性，认为结论很重要，而且认为结论一致是非常好的情况。但实践中发现，很快达成一致的结论往往最后被证明是错的，总会有一些事情没有人想到或者想清楚，大家是为了一致而一致。经过一段时间的调整，高瓴逐渐形成了在问题起点就共同讨论的决策流程，在选题和搭框架时就让相关决策人参与进来，在最初就拥有共同的信息基础，绝不是各说各话；同时，在刚一开始时就充分讨论，这样在最早看这个生意的时候，就有不断反馈的过程，而不是等到有结论的时候再去反馈，因为有结论了再去反馈则需要克服更多人性的弱点。所以这个自我反馈其实是在过程中的反馈，而不是对结论的反馈。思考和逻辑推演过程的重要性远远大于你所得到的结论。结论固然很重要，但微判断是载体，是一个人形成结论的过程。把许多微判断融入逻辑推演的分析框架中，才真正显出功力。
+
+## 避开价值投资中的陷阱
+
+前面提到要拒绝投机，同时也要警惕机械的价值投资，那么是不是不“左”不“右”就能做好价值投资呢？这其中，还要注意价值投资当中的许多陷阱。
+
+### 陷阱一：价值陷阱
+
+第一个陷阱是价值陷阱，避开它的要义是不要只图便宜，投了再便宜也不能投的项目。一个看上去“物美价廉”的投资未必是个好投资，因为投资标的必须有好的质量。
+
+沃伦·巴菲特对价值的理解也在不断迭代。他在2019年股东周年大会上对价值投资给出了新的诠释，这一点和我们所理解的并无二致。价值投资中的“价值”并不是绝对的低市盈率，而是综合考虑买入股票的各项指标，例如公司开展的是不是可以让人理解的业务，未来的发展潜力，以及现有的营收、市场份额、有形资产、现金持有、市场竞争等。
+
+价值陷阱是传统价值投资中极易被忽视的圈套。在分析标的时自然应该强调估值的重要性，不仅要看当前的估值，还要看企业在未来一段时期的表现，而且这个预期与企业拥有的核心技术、所在行业的竞争格局、行业周期、市场环境、组织形态以及管理层都有关系。如果一家企业的技术面临颠覆式挑战，而且完全没有研发或技术上的储备，那它的估值可能随时会一泻千里。如果一家企业所处的行业是赢家通吃或者寡头垄断的行业，那么它的估值就很难用现在的市场份额对应的营收或利润来判断，因为这种行业往往会产生极端的结果。如果是典型的大型企业，那么它的规模可能会妨碍反应速度和增长空间。对于管理层的判断也同样重要，尽管对管理能力进行预测是不科学的，但如果管理层盲目追求短期利润或者企业规模，而忽视企业的长期发展，那么企业未来会面临极大的不确定性。**投资这个游戏的第一条规则就是得能够玩下去（The No.1 rule of the game is to stay in the game）。**价值陷阱的本质是企业利润的不可持续性或者说不可预知性，投资人需要看更长远的周期或更大的格局，才能够识别并避免价值陷阱。
+
+### 陷阱二：成长陷阱
+
+第二个陷阱是成长陷阱，避开它的要义是不要有错判。我们强调成长型投资和价值投资之间并不画等号，这意味着有的成长型投资不是价值投资，而有的成长型投资是价值投资。
+
+成功的成长型投资必须能够预测新技术的成功机会、新市场的动向以及新商业模式的演化。评估企业成长性的落脚点应该是衡量这家公司的内在机制和动能。没有研究深、研究透以及多年摸爬滚打的经验积累，难以对上述种种因素做出有把握的预测，因此很容易陷入成长陷阱。要坚持在预测前进行严谨分析，同时又要承认未来是难以准确预测的，对未来的判断应始终保持合理的怀疑。不要高估当前的增长，也不要低估未来的成长。其实高估本身就是错判，只有短期的快速成长并不意味着长期能够持续不断创造价值，因为并非所有成长都是良性的。逆向思维在这里的应用是，要善于警告自己，很多成长型投资是没有门槛的，长期来看许多当前快速成长的公司长期却无法跑赢整体经济。许多公司从财务报表上看都是在增长，但是有的公司是真正地内外兼修，而有的公司只是处在“风口”上，利润报表的增长和这家公司没有直接关系，只是受到当时商业周期、经济环境的影响。就像价值陷阱的本质是利润的不可持续性一样，成长陷阱的本质就是成长的不可持续性。
+
+菲利普·费雪是成长股投资策略的开创者。他的核心投资理念在于，投资目标应该处于持续成长中，增长率至少应该高于整体经济，否则就不能持有。很多投资人给予高成长的企业高估值，就是假设这个成长能够持续下去，但高成长的企业要消化这个高估值，甚至超预期，这就很难了。
+
+人们经常说“千里马常有，而伯乐不常有”，其实“千里马也不常有”。《韩非子》中有句名言，“伯乐教其所憎者相千里之马，教其所爱者相驽马”，说的就是这个道理。千里马不常有，而驽马常有，相比于日日鉴定驽马的人，只鉴定千里马的人就得不到持续的训练；而反过来，鉴定驽马多了，自然也就知道何为千里马。所以，避开成长陷阱的办法就是保持平常心，坚持第一性原理，不要为了发现成长股而定义成长股，否则很容易被“得道升天”的侥幸所迷惑。
+
+### 陷阱三：风险陷阱
+
+第三个陷阱是风险陷阱，避开它的要义是不要错估风险。在现代金融学范畴中，风险往往被理解成市场波动，但这种理解是有前提的，即市场是有效的。从价值投资的角度看，风险更有可能是资本永久性、不可逆的损失，包括环境的不可逆、趋势的不可逆、业绩的不可逆、时间的不可逆等。要善于识别真正的风险，包括估值风险、企业经营风险和资产负债风险等。
+
+在价值投资中，只谈收益不讲风险的投资都是违背常识的。计算投资收益的基本公式就是风险和成本调整之后的长期、可持续收益。只要把风险看清楚了，就知道收益是怎么来的了，这就是所谓的**“管理好风险，收益自然就有了”（Focus on the downside and the upside will take care of itself）。**
+
+即使是再伟大的投资人，犯错误也是必然的，能否把犯错误的代价控制到一定的损失范围内，在风险与利润之间找到最佳平衡点，在“恐惧”“贪婪”的两难抉择面前保持平常心，是甄选成熟投资人的关键。也许有人觉得，避免犯错误的唯一方法是不进行投资，但这是所有错误当中最严重的一个。要学会宽容自己的错误，同时把每一次错误变成学习经验。正所谓“君子不立危墙之下”，规避风险陷阱的办法之一就是本杰明·格雷厄姆所说的寻求安全边际。把情况想到最坏，看看最坏的情况发生后还有哪些次生伤害，有没有反身性[(30)](javascript:void(0))，看看灾难来临时有没有自救手段或者“逃生舱”，始终对不确定性保持理性的谦卑，这些都是安全边际的内涵。另外一个角度就是判断企业持续创造价值的能力，持续创造价值就是最大限度地减少风险，这可以理解成以攻为守。
+
+### 陷阱四：信息陷阱
+
+第四个陷阱是信息陷阱，避开它的要义是不要迷信信息。价值投资是依赖基本面分析、依赖研究的工作模式，很多投资人收集信息的能力很强，但同时也面临着信息过载的问题。很多时候，犯错误的原因并不是你收集的信息不全或者收集了错误的信息，而是你过于相信了自己所掌握的信息。
+
+收集信息形成微判断只是第一步，第二步是善于识别信息的权重，到底哪些信息已经是市场的存量信息，哪些信息是市场的增量信息；哪些信息在哪个阶段是重要信息，哪些信息始终重要或不重要。给信息赋予权重，比做出微判断要难很多，很多价值投资者做不好这一点。第三步是用第一性原理把这些微判断和有权重的信息联系到一起，这才形成了真正有力量的东西，才能够把研究转变为决策，从研究员变成投资人。信息陷阱的本质就是信息本身不会告诉你立场或观点，更不会告诉你它有多重要，你所观察的角度决定了你看待信息的方式。这里面有很多经验性的、规律性的东西，也有很多是偶然性的、视角选择方面的东西。当拥有许多投资项目的时候，其中很多并不是真正的机会，所以更重要的是要把握如何识别这些机会的优先级，如何判断哪块“云彩真正有雨”。如果能够不断积累信息的赋权经验，那么投资能力就能达到新一轮的飞跃。规避信息陷阱的办法只有一个，就是不断去学习和思考，不断重复，形成惯性直觉和本能反应。
+
+避开价值投资的陷阱，归根结底是保持理性，保持理性的诚实，在没有充分地研究之前，在思维模式尚未得到检验之前，在没有把风险管理好之前，平衡好自信和谦虚的心态，保持积极的克制和勇敢的主动。
+
+## 价值投资无关对错，只是选择
+
+投资之道，万千法门。坚持何种投资理念，都不能以名门正派自居，更不能自认高手包打天下。武林之大，但凡修得暗镖神剑者，亦可独步江湖。所以门派无尊贵，只有适合不适合。在资本市场中，生存下来是第一要务，而生存最重要的是找到适合自己的投资方法。对于投资人来说，格局观不仅仅意味着长期谋略和精准洞察，其本质是你信守的投资哲学。
+
+### 底层思维决定投资方式
+
+在做投资研究时，底层的思维方式决定了研究与否、研究什么，投不投资、投资什么，而世界观、价值观决定了研究对象到底是事实、数据还是原理，投资对象究竟是不是时间的朋友。
+
+比如有的风险投资人，所投项目覆盖了三百六十行，所有行业的项目都看、都投。其实，他的逻辑不仅是建立在行业研究的基础上，更关注的是创业本身，是“创业”这项活动、这门生意。某种程度上说，“创业”这个领域，吸引了众多有斗志、有独立思考能力和卓越创造潜力的年轻人。他们值得被关注和支持，值得通过创业这件事来得到训练和提升。在所有决定创业能否成功的要素中，人是最主要的。因此，“培养创业者，使其拥有更为成熟的创业实践经验”这个项目本身，就值得投资。
+
+再比如有的投资人，喜欢由内而外地做判断，从内部的角度出发，更重视创始团队和组织基因；而有的投资人喜欢从外部的角度出发，关注行业格局、盈利结构、生意属性；还有的投资人喜欢从市场的角度出发，看宏观形势、政策趋势、板块轮动，关注时机和势能。角度虽不同，但如果能找到自洽的逻辑，这些投资人往往就能取得不错的成绩。
+
+还有的投资人天然对不确定性很有感觉。其实，人类生来就有一些心理认知误区，包括对不确定性的厌恶，表现为在遇到困惑或压力时，想尽快摆脱怀疑，追求确定的答案。但对于投资决策来说，其核心在于对不确定性的把握。每个投资人对事物认知的不确定性其实是不同的，有的人天生对大的市场走势有感觉，有的人天生对数据背后的逻辑有感觉，有的人天生对人性有感觉。对于同一个投资标的，有的人看到了低价，而有的人能够换一个角度来思考，看到的不仅是价格，还有协同和生态。你的不确定性在我这里可能就是确定性，所以每个人应该用自己擅长的方法来理解不确定性。当然，这里的前提是要有对自己的清楚认知，而对自我认知的不确定其实是每个人都必须面对的。
+
+### 选择让你有幸福感的投资
+
+**方法论本质上并无高低之分，只是天性的自知、自省与自****洽。**不同的投资人有不同的看家本领，这其实是基于不同投资原则和策略方法的不同优先选择。某种策略方法一旦成为信仰，一定有其厉害的地方。坚持一种投资方法的关键在于你要遵守一套游戏规则，就像音乐家的内心要有浑然的交响，诗人的内心要有和谐的意境，军人的内心要有统一的信念。如果脑子里有不同的标尺或者不同的声音，就会造成自我意识的混乱。只要坚持的基础原则相同，你就可以无所限制地表达，表达方式可以很丰富。所以，我们并不是以价值投资作为唯一的赚钱方法，而是把价值投资作为一种信念，一种让心灵获得安宁的工作和生活方式。
+
+正所谓兵无常形，投资的科学性和艺术性在不同的人看来一定有不同的解读。许多投资人都在潜心探索不同的投资理念和方法，由于每位投资人的价值观不同，能力圈[(31)](javascript:void(0))和风险承受力也不同，因此各自对投资的理解也不同，各自的梦想和实现梦想的路径自然不同。市场会对每个人的想法提供不同的反馈，即使反馈的结果相同，原因也未必一致；在每一次反馈上，每个人的所得对其效用不同，因为每个人的效用曲线也是不一样的。所以**选择投资方式就是选择自己的生活方式，出发点是你自己的内心，选择的是能够让你有幸福感的东西。**
+
+### 交给我管的钱，就一定把它守护好
+
+最后，我想谈一谈关于受托人责任的话题。我在从事投资的第一天就学到一句话，叫作“**我宁愿丢掉客户，也不愿丢掉客户的钱**”。这是价值投资者不可或缺的自我修养，因为声誉就是投资人的生命。别人能否信任你、帮助你，很大程度上都取决于你的声誉。
+
+### 忠实，把受托人责任履行到极致
+
+在我们推崇的投资哲学里，第一条就是“守正”，这里面最重要的一点正是坚持高度的道德自律，即按照最细刻度的道德标尺，把受托人责任履行到极致。道德自律是开展投资的前提，作为受托人，必须战胜人性的弱点，在诚实、专业中牢记使命和责任，遵循职业操守，防止任何有损出资人的行为发生。这种最重要也是最基本的受托人理念，是对投资人能力和人格的双重考验，尽管并不是每位投资人都能够时刻践行，但路遥知马力，一旦坚持下去，就能得到出资人的长期支持和在特殊时期的关键信任。
+
+优秀的资产管理机构应从出资人利益出发，始终将基金持有人利益放在首位。中国古代向来将“信义”和“生死”并称，诚信道义是中国古典哲学中极为重要的传承。在面对投资项目时，经常会遇到各种各样的情形，不可避免地受到外界环境、社会关系以及个人情感的影响，对于道德自律的坚守在这个时刻尤为重要。美国最高法院传奇大法官本杰明·卡多佐（Benjamin Cardozo）[(32)](javascript:void(0))曾经这样表述：“受托人应该在最敏感的细节上恪守荣誉感。”把投资道德作为第一标准，归根到底是一种理性。忠实于客户，坚持在最敏感的时刻保持理性思考，这会帮助受托人建立非常长期的信誉。
+
+### 审慎，以客户长远利益为中心
+
+以客户为核心，并不意味着客户想要什么就给什么，而是真正为客户的长远利益、最佳利益着想。受托人责任中，不仅有忠实的义务，还有审慎的义务。专业投资机构应发挥区别于普通投资者的风险识别能力，在处理受托事务时，必须保持合理的审慎，包括全面了解投资标的性质，建立充分完善的风控体系，保证财产的长期安全和稳定收益。许多客户容易受到外界环境的刺激而随波逐流，我们的投资哲学强调“守正用奇”，主张“逆向思考”，用正确的时间维度考虑市场变化和企业演进，最大限度地降低风险而获得利润，以实现客户的长远收益。
+
+如果投资人管理的钱来自教育事业、公益事业，是传子传孙的钱，就更没有道理不管好。在受托责任这个根本问题上，投资人应该时刻战战兢兢，坚持“以人为本”，无论顺境、逆境，都要保持客观积极的心态，牢记一名受托人的使命，铭记受托之重。
+
+德国哲学家伊曼努尔·康德（Immanuel Kant）说：“这个世界上唯有两样东西能让我们的心灵感到深深的震撼，一是我们头上灿烂的星空，一是我们内心崇高的道德法则。”投资人应该始终抱有这种信念，督促自己不断地为客户服务，在共同认可的投资理念下，坚持做研究，坚持与优秀的创业者合作，从而建立资本、资源、创业者之间相互促进的良性循环。理解了这些，就能够理解为什么说受托人责任是长期收益的真正来源。
+
+**价值投资者的自我修养，就是在长期追求内心宁静的过程中，坚持有所为有所不为；在道德自律和纪律约束中，重复反思，尊重常识，认知自我。所谓“初有决定不移之志，中有勇猛精进之心，末有坚贞永固之力”，正是长期主义的写照。**
+
+
+
 ## 我对投资的思考
 
 - **价值投资不必依靠天才，只需依靠正确的思维模式，并控制自己的情绪。**
