--- a/content/docs/3创新框架/10丰富有益的人生.md
+++ b/content/docs/3创新框架/10丰富有益的人生.md
@@ -9,7 +9,142 @@ images: []
 menu:
   docs:
     parent: "3创新框架"
-weight: 350
+weight: 340
 toc: true
 ---
 
+从投资人的角度来说，很多风险投资是需要退出的，但培养人才是永远不需要退出的投资。通过这些年的实践，我深刻意识到，**教育是对人生最重要、最明智的投资。**我希望用创新的方式倡导普惠教育，以此在社会转型的过程中承担责任、创造价值。
+
+从有益于社会的角度来说，如果有更多的人实现有益于社会的梦想，就一定能够推动社会的进步。在投资方面，我喜欢“想干大事”的企业家，在教育方面，我喜欢与具有伟大格局观的企业家共同发现人才、培养人才。我最大的乐趣就是帮助杰出的人发挥自己的天赋和价值，去实现梦想。就好比价值投资可以分为两个阶段一样，教育也是如此，第一阶段是发现价值，第二阶段是创造价值。这里的创造价值其实就是一个不断地动态地打造自己的过程，要善于发现自身的天赋和价值，构建并利用自己的独特性去创造价值，在对人生的“价值投资”中塑造自身的成就。
+
+![img](../教育投资.jpeg)
+
+教育是永不退出的投资
+
+高瓴所坚持的投资哲学在很多方面同样适用于教育和人生选择。第一是“守正用奇”，就是要在坚守“正道”的基础上激发创新；第二是“弱水三千，但取一瓢”，就是一个人要在有限的天赋里做好自己最擅长的那部分；第三是“桃李不言，下自成蹊”，就是指只要好好做自己的事，成功自会找上门来。
+
+还比如高瓴坚持的理性的好奇、诚实、独立以及同理心，这不仅适用于投资，也适用于教育。始终保持好奇心对年轻人来说非常重要，世界上永恒不变的只有变化本身，变化催生创新，所以我们应着眼于变化。只有始终保持着好奇心，不断地迎接、拥抱创新，才能创造善意的价值，形成让蛋糕更大、开放共赢的局面。真正的诚实，是既不要欺骗别人，也不要欺骗自己。虽然有时候，也许有人不靠诚实也能成功，但这种成功不但不持久，还有可能会“搬起石头砸到自己的脚”。在知识和智力上的独立也是非常重要的，能否形成独立的思辨能力实际上是决定年轻人能坚持走多远的基石。如果一个人同时拥有理性的好奇心、诚实的品质、思考的独立性，再加上一些同理心，并且有长期奋斗的心态，那么能否获得成功就只剩下运气和大数法则的问题。或者说，一遍一遍地做让你有激情的事，并且乐在其中，那么成功只是时间问题。
+
+再比如动态护城河理念，强大的学习能力和对事物的敏锐洞察力，是一个人能力的护城河。所以一个人要学会坚守自己的理想，珍惜自己短期内没有被外界看破的窗口机会，把护城河架构好，形成持续学习和创新的能力。
+
+所以，对投资的思考，也在帮助我延伸对教育、人才和人生选择的深层次思考，经历得更多之后，我最大的变化是理解了这个世界与社会的复杂性与多样性。在无数种推动社会进步的要素之中，教育、科学和人才不仅仅是创造价值的基础力量，还是塑造并推动整个社会进步的长期力量。所以，我时常鼓励年轻人，一定要从自己的内心出发，做真正对社会有益的事，比如去做科学家、做医生，或者亲自去创业，但不管从事何种职业，都要把创造价值，而不是积累个人的财富或者其他无益于社会的事情作为最重要的目标。
+
+## 长期主义的人才观
+
+在投资中，最宝贵的资源是时间；在投资机构中，最宝贵的资源是人才。市场上通常把投资人简单分为三种类型：资源型、社交型、研究型，而高瓴更重视的是最后一种，有研究特质的人。这一人才标准，不仅限于选拔投资经理，还是对高瓴所有岗位的一个基本要求。
+
+### 花大量时间在员工培养上
+
+好的研究型人才三分靠天赋，七分靠训练。天赋是一个人的基本盘，意味着是否足够聪明，是否足够想赢，是否有探究事物本源的好奇心。我们相信，经过多轮人才招聘的检验，进入公司的新人，都是具备强大自驱能力和学习能力的璞玉，公司要做的是，通过磨炼、培养和文化的熏陶，让他们学到正面的经验，少走不必要的弯路，尽早迈向更大的舞台。所以，我们会竭尽所能为新人创造发展的空间、学习的条件，允许新员工有成长的过程，花大量时间在员工培养上。
+
+员工培养的过程，其实是引导员工与公司文化、组织机制相互匹配和融合的过程。高瓴一直把自己看作永远在路上的“创业者”，我们要随时拥抱变化，学习全新的事物，进入崭新的领域。所以，在高瓴，无论是新员工还是老同事，都有很多机会去跳出舒适区，接触自己未曾涉猎过的领域，去做自己并不熟悉的事情。就像高瓴在持续创业的过程中不断发展一样，每个高瓴人也是在一次次突破自我边界的时候，理性的好奇、自我学习的能力得到最大的激发，从而收获最快的成长。
+
+当然，这种成长的过程也不是一蹴而就的，其间难免有失败和挫折。我们会为员工提供充分的容错空间。另外，我们也会创造条件，让员工分享得失，一起帮助其分析和复盘，积累成长值。更重要的是，通过这样的过程，我们要让员工明白，不是所有人一开始都能做到90分、100分，我们更看重潜质、价值观、驱动力。
+
+较好的员工成长环境还得益于足够扁平的组织机制。扁平的组织机制能够保证更多有价值的想法随时被听到，即使是一个新人的观点也能得到足够的尊重，会有人关心，会得到反馈。我们强调“多汇报、少请示”，鼓励包括新人在内的员工不怕露怯，勇敢表达。哪怕是“微判断”，也要及时提出来，不要奢望一次汇报解决问题。我们也要求团队领导者对员工的想法迅速给出反馈，反复消化，不断迭代。
+
+这个对新人来说尤其关键，尤其是经历过其他层级化组织的新人，会被这种及时的反馈所鼓舞。在新人看来，有业内成熟干练、积累深厚的一群人在听他们提出的策略，在帮他们分析、验证、纠正和提高。这种文化，会迅速释放新人的表达欲望。因为大家知道，勇敢表达，就是在争取难得的学习和被帮助的机会。
+
+员工的成长有两方面：一方面是素质和业务上的提高，另一方面是与公司形成情感上的连接和默契。在团队内部，我们也会努力营造一个更好地倾听反馈和给予关怀的氛围，让新员工知道，公司能看到他们的努力，理解他们。我们力争做到，对员工提出方向性的引导更多，而具体的要求和标准更少。要引导员工往正确的方向上走，但不能特别要求事情做好的标准是什么。有标准，每个人都可能拿标准去比较，而一味的比较并不利于员工的长期发展。我们更希望，每个高瓴人会在公司组织文化的熏陶和引导下，找到适合自己的“好标准”。总之，条条大路通罗马，每个人都有自身的成长路径。还是那句话，**对于有潜质、价值观一致的员工，我们奉行长期主义，不着急，慢慢来，给予其充足的成长时间。**
+
+### 一定可以“走得更远”
+
+一般来说，高瓴的员工依靠自我驱动的学习热情，加上公司文化、运行机制、业务实践的打磨，能够积累非常丰富的经验和能力。
+
+选择做时间的朋友，对高瓴来说，是一种人才培养机制，对每一位高瓴人来说，也是一种对自我成长的期许。做时间的朋友，需要极强的自我约束力和发自内心的责任感。在多数人都醉心于“即时满足”的世界里时，懂得“延迟满足”道理的人，已经先胜一筹了。毛主席在《七律·和柳亚子先生》一诗中写道“风物长宜放眼量”，就是让我们从远处、大处着眼，要看未来，看全局。这常常是高瓴给创业者的建议，其实也同样适用于每一位高瓴人的工作和生活。坚持自己内心的选择，不骄不躁，持之以恒，时间终将会成为你的朋友。
+
+我们也看重对人才考核的连续性，保证高瓴人能以更长远的眼光看待投资回报。在激励机制安排上，我们强调长期性，并不简单以短期回报倍数作为考核结果。
+
+高瓴也希望为员工提供一个发现价值和创造价值的平台，通过公司全周期、全链条的投资生态，让每一位员工可以尽情挥洒激情，施展抱负，得到立体的、全方位的锻炼和提升，拥有不一样的格局、视野和丰富经验，最大限度地满足每个人的职业成就感。
+
+当然，“梦想有多大，舞台就有多大”，让每个人能走得更远的，归根结底还是自我驱动力和自我学习能力，是对真理的热爱和追求，是持续解决社会痛点的使命感。只有这样，才能不断吸收、消化平台和实践提供的输入，不断提高自己思考的维度，与公司一起创造更大的价值的同时，实现个人价值的不断提升。
+
+## 成长型的人才培养机制
+
+历次产业变革，都是在新技术、新思维与社会经济产业的碰撞融合中完成动力转化、模式创新，并且带来数以万计的新产品、新物种的爆发的。能在这个时代脱颖而出的创业者，往往是能够多学科思考的鬼才和拥有多维视野的怪才。
+
+而这个时代的投资人，仅有金融投资或者商业管理方面的知识是远远不够的，需要多学科的知识储备和洞察。
+
+### 拥有多学科思维的多栖明星
+
+我们通过跨时间、跨行业的研究，输出行业洞察，并寻找具有伟大格局观和创新精神的创业者，实际上跟创业者一样，是在新的技术趋势下，结合原有产业规律和现状，进行对新的技术应用、新的商业场景的洞察和设计。这样的设计，不是简单的物理上的，也不是简单的虚拟化的，它需要运用商业、技术、艺术等多维设计能力才能实现。这样的洞察和设计，有时候甚至是在新一代消费者的心理之上进行的。
+
+比如在新的消费品牌领域，要做出前瞻性的洞察，仅仅具有理工科思维、商业思维是不够的，必须要有一定的文科生思维，甚至是艺术方面和心理学方面的思维。拥有多元的思维模型，才能敏锐把握最新的文化形态，精准描绘新一代用户画像，知道他们热衷什么、喜欢怎样表达、关心哪些事、会被怎样的内容吸引，也才能够理解不同的生意形态到底能在什么样的环境下胜出。
+
+比如喜茶这个新兴的网红消费品牌，它的成长固然有理性的商业逻辑在，但它的崛起又是超越了单纯的商业计算的，依靠的是对消费者心理的精确把握与触达。所以，你会看到，除了对口味、服务、包装设计的精益求精之外，联名、跨界等营销玩法层出不穷，这些是难以纯粹依靠算数得出来的。
+
+著名作家汪曾祺说，一个人的口味要宽一点、杂一点，“南甜北咸东辣西酸”，都去尝尝。对食物如此，对文化也应该这样。实际上，这样宽一点的口味，用在对人才的要求上，也是完全适用的。我们要培养能学会玩、十八般武艺样样精通、拥有跨学科思维的“多栖明星”。
+
+### 共创、共享的“知识大脑”
+
+我们全力打造学习型组织，倡导团队内部的“传、帮、带”文化与跨团队的交流和分享，创造一切条件促成内部的相互学习。
+
+在高瓴，新同学的培养大多要依靠工作中的耳濡目染与逐渐熏陶。周会、双周会、月会、专题分享、投资决策会对新同学来说都是非常好的学习机会。尤其是在投资决策会上，团队的项目经常会收到首席投资官的直接点评，让新同学尽早地理解高瓴的研究、思考方式，理解高瓴到底要做什么样的投资。
+
+不仅如此，知识无边界。我们非常注重互相学习与个人认知的共享，注重每个人能否给团队分享传递有效的新认知与新发现。这是一个在组织内部不断对新人进行训练的过程。当然，个体都是有差异的，个人的理解肯定存在偏差。我们的组织文化、“传、帮、带”的机制，就是在努力缩小这种认知偏差，让高瓴的方法论、价值观得到正确的表达和传承。
+
+当然，这种“传、帮、带”不是为了消灭个性——那与我们倡导的独立思考的文化是相悖的。我们是要在个体的独立性、组织的不断创新迭代，与业务的稳定向上、精神理念的传承之间，找到一个恰当的平衡点。
+
+跨团队分享机制，最典型的体现就是高瓴的年会。通常，大家对年会印象最深的，除了公司领导继往开来的总结展望，可能就是晚宴上的表演、抽奖以及各种在吃喝玩乐中的放松和释放。在高瓴，这些环节当然也必不可少，但对于一个学习型组织来说，仅有这些显然远远不够。我们的年会周，又被称为“学习周”。每年年会前的那几天，每一个高瓴人都会收到一份“选修课”大餐——基本上每个团队都会派出一名“老师”，拿出“干货”满满的知识与经验，和其他部门的成员进行交流。
+
+这样的学习分享，会一直贯穿年会周的始终。每个高瓴人都会非常重视这样学习交流的机会，因为，被选为“老师”的人一定有着外界难以看到的不传秘籍，加上精心的准备、现场不设限的深入交流，最后呈现的绝对是一场场年度智识的饕餮盛宴。当然，“师资力量”不仅来自公司内部，我们也会博采众长，邀请外部的企业家、学者以及各行各业的“大拿”过来，做各种形式的交流。如果觉得这些交流还不够深入，每年的年会周，我们还有一个专门设立的一对一交流环节，形式上就像一次8分钟约会的相亲大会一样。高瓴人可以提前通过系统尽快下手去选定三个自己“心仪已久”的同事，也可以“佛系”一些，等待命运匹配的惊喜。总之，新鲜的不仅是形式，更是坐在对面的同事带来的全新的知识，交流时间虽然短暂，但一对一的形式保证了交流的深入和高效。
+
+实际上，这样充分交流、无私分享的内部机制，还有更深层次的意义。我们不断深入各种行业，收集各种信息，研究各类公司，最后不仅完成信息转化为知识、知识成为洞见、洞见指导实践的过程，也有机会将所有的知识、洞见，在行业、环境的空间维度，以及时代、技术、商业变革的时间维度上连接起来，形成更大的知识图谱。
+
+而这个“制图”过程，是投资团队、投后管理团队及中后台支持团队的每一名员工都参与的。每个部门都有自己的方法论，有自己的知识体系，大家合在一起，才是一张完整看待世界的知识图谱，一个公司的“知识大脑”。而内部的学习分享机制，就是这一“知识大脑”神经元的连接方式之一。这一机制，让每一名员工都有机会去共享一个超级知识库，又同时参与了它的迭代建设。
+
+### 在时间中彼此合作、学习和收获
+
+投资可能是世界上最具有魅力的工作之一。我们把各种各样的聪明人聚集在一起，大家一起做研究，一起得出判断，去押注价值标的，参与价值创造，在时间的评判中去收获、学习、成长。
+
+而投资机构可能又是世界上最难管理的组织。一群天生骄傲的聪明人如何相互配合？一群“各怀绝技”的高手又如何密切协作？既然投资不是“智商为160的人一定能击败智商为130的人”的游戏，投资机构如何做好团队的内部协作？
+
+在这个方面，高瓴是幸运的，因为我们从一开始就是一家研究驱动的投资机构。“学院派”是我们最鲜明的标签。俗话说“文无第一，武无第二”，也许一群学者型投资人聚集在一起，自然而然就形成了共同探讨、相互学习、互相启发的学术氛围。同时，长期主义的基因在机制上保证了我们可以在喧嚣的市场中保持定力，为研究安放“一张安静的书桌”。而价值创造的理念，又让我们在市场的潮起潮落中保持了一份心灵的宁静，对内对外都不争不抢，不断去实现自己的“诗和远方”。
+
+当然，团队协作文化的形成，还在于我们在多次穿越周期之后，对市场本身有了深深的敬畏。我们永远无法真正掌握真理，只能不断靠近它。这是一种面对真理的谦卑，它承认了个体认知的局限性，从而驱动自己向包括团队伙伴在内的任何有益方向不断吸收学习。
+
+此外，作为一个创业者，我们随时准备拥抱变化、迎接外部挑战，这样的状态决定了，我们的组织内部要越简单越好，才能同心协力、快速反应。
+
+从某种意义上来说，面对瞬息万变、不断发展的外部和市场环境，我们要在巨大的压力下，随时做出抉择判断，这真的不亚于进行一场高强度的对抗赛，而你的身边人就是你唯一可以信赖的队友，大家只有背靠背站在一起，互相依靠，互相支撑，才能汇聚更多的智慧和力量。
+
+而且，团队协作还让我们在内部形成了很好的复盘和纠错机制。习惯于单打独斗的人，大多数时候很难形成自我反省的心态，因为，自己是最容易说服自己，甚至骗自己的；而在团队之中，大家相互交流，相互提醒，甚至相互挑战，既鼓励大家独立判断，又发挥了平台纠错机制，不仅促使我们团队不断反省、复盘，减少出错的概率，争取提高长期胜率，更有助于个人在其中不断学习，快速成长。
+
+很多优秀的人愿意加入高瓴，也许就是因为这里有一个终身学习的环境，一个可以相互协作、相互启发的组织文化。这样的文化，让我们在彼此协作、相互学习中越来越坚信，选择与谁同行比要去的远方更重要。
+
+## 教育和人才是永不退出的投资
+
+为善最乐，是不求人知。高瓴坚持“桃李不言，下自成蹊”的投资哲学，就是此意。在更宏大的世界观里，价值投资可以发挥更大的作用，可以做创新资本与赋能资本，但首先应该做“良善资本”，通过在教育、科学、扶贫等公益领域的投入，让更多人、更基础的力量以更包容的方式塑造未来。
+
+### 教育，最重要、最明智的投资
+
+我对教育和人才培养的理解有三个层面：第一，对于教育，首先应该培养学生拓展什么样的能力？我想到的答案是创造性思维能力和对交叉学科的学习能力。第二，对于科技创新，应该培养怎样的人引领产业未来发展？答案是具备人文精神的科学家、工程师。第三，对于更长远的未来，怎样培养一些人做最基础的科学研究，做理论创新和原发创新？答案是通过设立研究型大学。
+
+正因如此，我始终对教育和人才培养心心念念，希望帮助更多年轻人追求知识上的丰富、能力上的完善和价值观上的正直。2010年开始，我在中学母校驻马店高中，以自己读书时所在的107班的名义设立了“107奖学金”，持续资助优秀的学弟学妹们圆梦大学，培养探索精神和独立人格。2011年，我在大学母校中国人民大学捐建了高礼研究院，出发点就是看到好的教育平台可以塑造一个人的气质与格局，与杰出商界领袖直接对话，则可以提升一个人的境界与视野。我们应当考虑的是，如何与高质量的人花足够多的时间，做一些高质量的事情。2017年6月，我再次向中国人民大学捐赠了3亿元人民币，用于长期支持创新型交叉学科的探索和发展，鼓励年轻人在纷繁复杂、选择众多的世界里多学善思，以创造式、思辨式思维，做出真正有益于国家和社会发展的选择。同年，作为创始捐赠人，我捐赠支持创立中国第一所聚焦基础性前沿科学的创新型研究大学——西湖大学，希望协助施一公师兄整合社会资源和募集社会资金，引进好的教育思想和理念，以支持学校更好地发展。
+
+说起西湖大学，这是中国第一所靠社会各界捐赠而创办的现代大学。截至2019年底，共有44位创始捐赠人和超过1万名来自世界各地各个社会群体的人士为这所大学捐赠，其中包括学生、工程师、医生、普通工人、公务员、艺术家、教师、农民和外来务工人员、华人华侨等。
+
+对于创办西湖大学，我们共同的思考是如何运用社会的力量和国家的支持，创办一所致力于高等教育和学术研究的新型研究型大学。特别是在看到许多有理想、有情怀的世界级科学家投入国家的教学科研和人才培养事业中时，这些相互交织的力量给了我们很大的鼓舞。西湖大学的创立也不仅仅是为了培养一些科学家以形成重大的科研突破，更关键的是，它在探索人才培养、科学研究、大学管理的创新机制，去引领全社会形成尊重科学、尊重基础科学的氛围。这种社会意义和长远价值是无比巨大的，对中国甚至世界的创新发展都会产生不可估量的影响。
+
+**教育是一个很讲究情感关怀和激励的领域，越是处于一个“机器横行”的人工智能时代，我们就越是呼唤人性中独特的同理心和情感互动等真正有温度的东西。**科技的创新终将引领教育的创新，人工智能给教育带来了挑战，但这些挑战也给人类提供了一个更大的重新创造历史的机会。所以，人文主义和精英意识应结合起来，精英们不能孤芳自赏，“躲进小楼成一统”[(49)](javascript:void(0))，而应当与社会发展同步，在与社会的情感关怀和互动中实现自身价值。
+
+有一种说法是：“一个社会的今天，靠经济；一个社会的明天，靠科技；而一个社会的未来，靠教育。”我不仅仅将自己定位为一名教育事业捐助者，更看作一名创新教育模式的践行者。对于企业家而言，捐款是相对容易的事情，更重要的是要花费精力和时间，结合中国国情和发展趋势，脚踏实地地探讨和引进最好的教育思想和资源。中国的教育制度有很多可取之处，比如通过长期的训练和多重考核，培养学生形成极高的韧性，这些品质对学生将来的个人发展，无论是创业还是做投资，都是非常重要的。在这个基础上，可以引进一些新的教育思想和资源，培养能够跨行业、跨界、跨专业自由思考的人才。
+
+我们不能只建一座桥，而要建很多座不一样的桥，甚至要有摆渡船，来帮助大家以各种方式到达教育和自我认知、自我丰富的彼岸。比如，我们可以探讨和拓展教育多样性，包括精英教育、普惠教育、职业教育等多种多样的形式，支持教育的供给侧改革。为此，我仍在不断进行在其他领域的教育探索和投入，希望在未来用更多的创新方式支持教育，让投资、教育与社会相互促进，以此来支持社会的转型进程。
+
+### 科学精神，是推动社会进步的基础力量
+
+我相信人类社会的基本法则是相互依存，我心中最柔软的地方就是希望能够更好地与人们产生关联，更好地建立人与人之间的联结，回归友善和温暖。我一直认为，**未来的构建需要无尽的想象力和踏实的执行力，这两种力量汇聚在一起就是创新，而创新的核心正是人才。**我希望通过投资和公益把创业者、企业家、科学家连接起来，把坚持价值投资的投资人连接起来，把商业头脑和科学知识连接起来，把商业文明和人文精神连接起来。新的产业时代根本上还是需要依靠科学技术来驱动，需要真正的科学上的创新，尤其是基础科学、“硬”科学上的创新。因此，在这样的环境下，人才也需要多方面的知识储备，仅有商业管理或是金融经济方面的知识是不够的。未来，我们需要培养既有商业头脑又有科学技能的跨界型人才，我们需要既有商业头脑又有人文精神的科学家，也需要具有科学知识并尊重科学的创业者、企业家，能够和科学家一起去工作。这是市场所提出的需求，也是社会所提出的需求。在我看来，未来的入口是科学和教育，有一条解决今天很多现实问题的根本路径，那就是兼具人文精神的科技创新，尤其是基础科学的创新。
+
+为此，在2015年，我与一众科学家、企业家、投资人共同发起设立了“未来论坛”，希望借助这个平台，能够邀请不同领域的专家、学者进行前瞻性、启发性和思辨性的探讨与交流，打通产、学、研和投资之间的壁垒，寻找未来的新标准、新可能。在未来论坛成立大会上，我向理事会提出设立未来科学大奖的倡议，希望能够用这个奖项鼓励和吸引更多年轻人从事科学、专注于科学，为他们打开新的一扇窗，鼓励他们用科学发明的成果去给人类社会做贡献，而不仅仅是想当明星或者金融家。
+
+中国的创新如果只靠商业模式的创新，总有一天会走到头。再往后，国家竞争力的提升就需要把基础科学打得更扎实。所以，无论是倡议设立未来科学大奖，还是支持西湖大学，本质上都是要帮助科学家做一些长远来看有意义的事。因此，作为一家坚持长期主义的投资机构，我们有责任帮助孵化、连接并转化基础研究和原始创新的成果，帮助更多投资人理解和掌握价值投资理念背后的精神，将科技进步、创业创新和价值投资连接起来，成为推动社会进步的基础力量。
+
+所以，如何理解财富的意义，对于一名投资人而言格外重要，甚至能够影响很多重要的投资决策。在我看来，财富的意义远不止于物质和金钱，而是代表着沉甸甸的道义和责任。人们的财富既然来自社会，那么人们就尤其需要善用这些财富去服务和回馈社会。从小处讲，这是知识与财富的良性循环，从大处讲，这是为了让个人价值与造福人类的终极目标相一致，让教育、人才、财富、公益和社会之间形成更大更好的循环。
+
+**教育和人才，可能是最长远的投资主题，永远不需要退出。当教育驱动人才和社会蓬勃发展、不断创造价值的时候，在更宏大的格局观里，投资人能够发现更多有意义的事情，这也是最大化创造价值的超长期主义。**
+
+## 我对投资的思考
+
+- 　**对于有潜质、价值观一致的员工，我们奉行长期主义，不着急，慢慢来，给予其充足的成长时间。**
+- **教育是一个很讲究情感关怀和激励的领域，越是处于一个“机器横行”的人工智能时代，我们就越是呼唤人性中独特的同理心和情感互动等真正有温度的东西。**
+- **未来的构建需要无尽的想象力和踏实的执行力，这两种力量汇聚在一起就是创新，而创新的核心正是人才。**
