--- a/content/docs/3创新框架/7创造价值的组织.md
+++ b/content/docs/3创新框架/7创造价值的组织.md
@@ -15,7 +15,7 @@ toc: true
 
 一家创业公司的发展历程，有高光时刻，也有至暗时刻。在纷繁复杂的创业环境中，积极乐观的精神气质和管理文化能够使其处乱不惊。因此，创业公司的组织管理逐渐成为一个被广泛研究和讨论的话题。现状是，大多数创业者在生存与死亡的急迫问题上耗费了太多的精力，几乎没有多余的精力用在组织的内部管理上；同时，在各种形态的创业组织中，难以找到统一的、有效的管理范式。但毋庸置疑，组织和管理创新是企业杀出竞争重围的核心动力，在某些时候，甚至成为决定创业成败的关键变量。
 
-1912年，科学管理之父弗雷德里克·泰勒（Frederick Taylor）[(33)](javascript:void(0))提出科学管理理论。诞生之初，管理学语言发源于工程学语言，它把员工看作被使用的人力资源，把组织看作可以准确调整和控制的机器，把管理看作可确定、可预测、可计划的事情。但是，新的商业环境、组织方式和新一代员工的特质决定了当前的管理变成了一种难以预测和标准化的动态过程。尤其是对于创业公司而言，应该选择怎样的内生动力和管理规则来驱动组织发展？是不是应该追求区别于传统经济的管理实践，而适应新时代、新经济的管理法则？创业公司有没有更灵活的管理模式？这些问题或许没有答案，但比答案更重要的是创业者在实践中寻找答案的过程。
+1912年，科学管理之父弗雷德里克·泰勒（Frederick Taylor）提出科学管理理论。诞生之初，管理学语言发源于工程学语言，它把员工看作被使用的人力资源，把组织看作可以准确调整和控制的机器，把管理看作可确定、可预测、可计划的事情。但是，新的商业环境、组织方式和新一代员工的特质决定了当前的管理变成了一种难以预测和标准化的动态过程。尤其是对于创业公司而言，应该选择怎样的内生动力和管理规则来驱动组织发展？是不是应该追求区别于传统经济的管理实践，而适应新时代、新经济的管理法则？创业公司有没有更灵活的管理模式？这些问题或许没有答案，但比答案更重要的是创业者在实践中寻找答案的过程。
 
 在高瓴的创业历程中，我也时常思考，一家初创公司应该如何管理。我的文化价值观受到许多中国古代文化，尤其是老庄哲学的熏陶，与此同时，在互联网的快速发展中，互联网开放、共享的精神也对我颇有影响。
 
