--- a/content/docs/3创新框架/8变革中的价值资产.md
+++ b/content/docs/3创新框架/8变革中的价值资产.md
@@ -27,7 +27,7 @@ toc: true
 
 ## 哑铃理论：让科技成为和谐再造的力量
 
-在这样一个激动人心的时代面前，许多企业家推敲不定：能否在快速的变化中存活下来？企业应该怎样运用科技的力量不断创新？自经济学家约瑟夫·熊彼特[(37)](javascript:void(0))提出“创造性破坏”这一概念以来，科技创新便被世人普遍认同为颠覆者，而传统产业受到冲击则被认为是社会进步必须付出的代价。换言之，新经济不仅另辟蹊径开疆拓土，还步步蚕食传统经济的自有领域。新经济来了，旧产业输了？事实似乎并非如此。
+在这样一个激动人心的时代面前，许多企业家推敲不定：能否在快速的变化中存活下来？企业应该怎样运用科技的力量不断创新？自经济学家约瑟夫·熊彼特[(37)提出“创造性破坏”这一概念以来，科技创新便被世人普遍认同为颠覆者，而传统产业受到冲击则被认为是社会进步必须付出的代价。换言之，新经济不仅另辟蹊径开疆拓土，还步步蚕食传统经济的自有领域。新经济来了，旧产业输了？事实似乎并非如此。
 
 ### 从创新1.0进入创新2.0
 
