修改 docs 文章末尾我的思考样式

--- a/content/docs/2投资哲学/5_价值投资者的自我修养.md
+++ b/content/docs/2投资哲学/5_价值投资者的自我修养.md
@@ -219,14 +219,10 @@ toc: true
 
 ## 我对投资的思考
 
-- **价值投资不必依靠天才，只需依靠正确的思维模式，并控制自己的情绪。**
+- 价值投资不必依靠天才，只需依靠正确的思维模式，并控制自己的情绪。
 
-- **好奇心不受好胜心或者战胜他人的成就感所驱动，不是为了当第一把别人比下去，也不是为了战胜市场。**
-
-- **信念有时比处境更加重要，你的格局观决定了你的生存环境，也决定了你的投资机会。**
-
-- **方法论本质上并无高低之分，只是天性的自知、自省与自洽。**
-
-- 　**选择投资方式就是选择自己的生活方式，出发点是你自己的内心，选择的是能够让你有幸福感的东西。**
-
-- **我宁愿丢掉客户，也不愿丢掉客户的钱。**
+- 好奇心不受好胜心或者战胜他人的成就感所驱动，不是为了当第一把别人比下去，也不是为了战胜市场。
+- 信念有时比处境更加重要，你的格局观决定了你的生存环境，也决定了你的投资机会。
+- 方法论本质上并无高低之分，只是天性的自知、自省与自洽。
+- 选择投资方式就是选择自己的生活方式，出发点是你自己的内心，选择的是能够让你有幸福感的东西。
+- 我宁愿丢掉客户，也不愿丢掉客户的钱。
