--- a/content/docs/3创新框架/10丰富有益的人生.md
+++ b/content/docs/3创新框架/10丰富有益的人生.md
@@ -145,6 +145,7 @@ toc: true
 
 ## 我对投资的思考
 
-- 　**对于有潜质、价值观一致的员工，我们奉行长期主义，不着急，慢慢来，给予其充足的成长时间。**
-- **教育是一个很讲究情感关怀和激励的领域，越是处于一个“机器横行”的人工智能时代，我们就越是呼唤人性中独特的同理心和情感互动等真正有温度的东西。**
-- **未来的构建需要无尽的想象力和踏实的执行力，这两种力量汇聚在一起就是创新，而创新的核心正是人才。**
+- 对于有潜质、价值观一致的员工，我们奉行长期主义，不着急，慢慢来，给予其充足的成长时间。
+
+- 教育是一个很讲究情感关怀和激励的领域，越是处于一个“机器横行”的人工智能时代，我们就越是呼唤人性中独特的同理心和情感互动等真正有温度的东西。
+- 未来的构建需要无尽的想象力和踏实的执行力，这两种力量汇聚在一起就是创新，而创新的核心正是人才。
