--- a/content/docs/3创新框架/7创造价值的组织.md
+++ b/content/docs/3创新框架/7创造价值的组织.md
@@ -141,16 +141,16 @@ toc: true
 
 ## 我对投资的思考
 
-- **每一位企业家都应该是价值投资的天然实践者。**
+- 每一位企业家都应该是价值投资的天然实践者。
 
-- **企业文化必须在创业一开始时就建立起来，不能出问题，也无法推倒重来。**
+- 企业文化必须在创业一开始时就建立起来，不能出问题，也无法推倒重来。
 
-- 　**一个卓越的创业组织最好的状态就是年轻的状态，依靠内生的组织力，没有包袱、满是憧憬，不假思索、以终为始。**
+- 一个卓越的创业组织最好的状态就是年轻的状态，依靠内生的组织力，没有包袱、满是憧憬，不假思索、以终为始。
 
-- **吸引和尊重人才不是一句口号，而是创业公司保持活力的重要选择。**
+- 吸引和尊重人才不是一句口号，而是创业公司保持活力的重要选择。
 
-- 　**在创业公司中，更好的方式是把培养和“绽放”人才作为中心工作，开发每个人和团队的能力。**
+- 在创业公司中，更好的方式是把培养和“绽放”人才作为中心工作，开发每个人和团队的能力。
 
-- 　**不是老板给你一张网，让你捕几条鱼，而是你主动去寻找一片海、一个更好的捕鱼方式，甚至一个更好的养鱼方式，等等。**
+- 不是老板给你一张网，让你捕几条鱼，而是你主动去寻找一片海、一个更好的捕鱼方式，甚至一个更好的养鱼方式，等等。
 
-- 　**让最聪明的人待在一起，谁知道会碰撞出什么改变世界的好主意！**
+- 让最聪明的人待在一起，谁知道会碰撞出什么改变世界的好主意！
