--- a/content/docs/3创新框架/8变革中的价值资产.md
+++ b/content/docs/3创新框架/8变革中的价值资产.md
@@ -243,10 +243,16 @@ toc: true
 
 ## 我对投资的思考
 
-- 　**在新消费的概念中，产品及其品牌包含了在服务过程中与消费者沟通的全方位要求，换句话说，零售即服务，内容即商品，所见即所得，物质组成的产品力和文化组成的品牌力共同成为理解消费新趋势的复合视角。**
+- 在新消费的概念中，产品及其品牌包含了在服务过程中与消费者沟通的全方位要求，换句话说，零售即服务，内容即商品，所见即所得，物质组成的产品力和文化组成的品牌力共同成为理解消费新趋势的复合视角。
 
-- 　**新零售的实现方式，就是用更加细分的场景满足不断变化的需求，好的消费场景是打造品牌力的关键。**
+  
 
-- 　**数字科技化赋能是在飞行中换发动机，不会改变传统企业的行业属性，不是“停业整顿”，也不是为了创新而创新，必须直接为业务带来增量。**
+- 新零售的实现方式，就是用更加细分的场景满足不断变化的需求，好的消费场景是打造品牌力的关键。
 
-- 　**世界上本没有科技企业和传统企业的分野，优秀的企业总会及时、有效地使用一切先进生产要素来提高运营效率，从而实现可持续增长。**
+  
+
+- 数字科技化赋能是在飞行中换发动机，不会改变传统企业的行业属性，不是“停业整顿”，也不是为了创新而创新，必须直接为业务带来增量。
+
+  
+
+- 世界上本没有科技企业和传统企业的分野，优秀的企业总会及时、有效地使用一切先进生产要素来提高运营效率，从而实现可持续增长。
