--- a/content/docs/3创新框架/伟大格局观者同行.md
+++ b/content/docs/3创新框架/伟大格局观者同行.md
@@ -191,14 +191,14 @@ toc: true
 
 **想干大事、具有伟大格局观的创业者、企业家是最佳合作伙伴，“格局观”就是我们与企业的接头暗号。**
 
-- **把价值观放在利润的前面，坚信价值观是这个企业真正核心的东西，那么利润将只是做正确的事情后自然而然产生的结果。**
+- 把价值观放在利润的前面，坚信价值观是这个企业真正核心的东西，那么利润将只是做正确的事情后自然而然产生的结果。
 
-- 　**真正的企业家精神能够在时代的进化中看到未被满足的消费需求，这是把握住了大趋势中的定式。**
+- 真正的企业家精神能够在时代的进化中看到未被满足的消费需求，这是把握住了大趋势中的定式。
 
-- **企业家精神加上**21**世纪新型组织的打造方式，就是超越雇佣关系的新型合伙关系。**
+- 企业家精神加上21世纪新型组织的打造方式，就是超越雇佣关系的新型合伙关系。
 
-- **没有一定要做的生意，但有一定要帮的朋友。**
+- 没有一定要做的生意，但有一定要帮的朋友。
 
-- **任何时候，都不要让处境、金钱、教育背景以及其他东西成为你的负担，让你与现实和他人产生隔阂。**
+- 任何时候，都不要让处境、金钱、教育背景以及其他东西成为你的负担，让你与现实和他人产生隔阂。
 
-- **创业活动本身最大的风险其实就是保持不变、不敢去冒险，如果创业者不去冒险的话，投资人就在冒最大的风险。**
+- 创业活动本身最大的风险其实就是保持不变、不敢去冒险，如果创业者不去冒险的话，投资人就在冒最大的风险。
