--- a/content/docs/2投资哲学/4_价值投资方法与哲学.md
+++ b/content/docs/2投资哲学/4_价值投资方法与哲学.md
@@ -337,19 +337,13 @@ toc: true
 
 ## 我对投资的思考
 
-- **最好的分析方法未必是使用估值理论、资产定价模型、投资组合策略，而是坚持第一性原理，即追本溯源，这个“源”包括基本的公理、处世的哲学、人类的本性、万物的规律。**
+- 最好的分析方法未必是使用估值理论、资产定价模型、投资组合策略，而是坚持第一性原理，即追本溯源，这个“源”包括基本的公理、处世的哲学、人类的本性、万物的规律。
 
-- **独立研究的最大价值是让投资人敢于面对质疑，坚信自己的判断，敢于投重注、下重仓。**
-
-- **世界上只有一条护城河，就是企业家们不断创新，不断地疯狂地创造长期价值。**
-
-- **商业竞争本质上要看格局，要看价值，要升维思考，从更大的框架、更广阔的视角去看给消费者创造怎样的价值。**
-
-- **对于投资人来说，看人就是在做最大的风控，这比财务上的风控更加重要，只要把人选对了，风险自然就小了。**
-
-- 　**如果说价值投资的出发点是发现价值的话，其落脚点应该是创造价值。**
-
-- 　**所谓长期结构性价值投资，是相对于周期性思维和机会主义而言的，核心是反套利、反投机、反零和游戏、反博弈思维。**
-
-- **在多数人都醉心于“即时满足”的世界里时，懂得“延迟满足”道理的人，已经先胜一筹了。**
+- 独立研究的最大价值是让投资人敢于面对质疑，坚信自己的判断，敢于投重注、下重仓。
+- 世界上只有一条护城河，就是企业家们不断创新，不断地疯狂地创造长期价值。
+- 商业竞争本质上要看格局，要看价值，要升维思考，从更大的框架、更广阔的视角去看给消费者创造怎样的价值。
+- 对于投资人来说，看人就是在做最大的风控，这比财务上的风控更加重要，只要把人选对了，风险自然就小了。
+- 如果说价值投资的出发点是发现价值的话，其落脚点应该是创造价值。
+- 所谓长期结构性价值投资，是相对于周期性思维和机会主义而言的，核心是反套利、反投机、反零和游戏、反博弈思维。
+- 在多数人都醉心于“即时满足”的世界里时，懂得“延迟满足”道理的人，已经先胜一筹了。
 
